[tool.poetry]
name = "keycraft"
version = "0.1.0"
description = "Keycraft is a Python-based automation tool designed to streamline the configuration of Keycloak"
authors = ["André (ugsto) Bortoli <andre.ugsto@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
keycraft = "keycraft.main:main"
